--- a/src/pages/video-player/index.html
+++ b/src/pages/video-player/index.html
@@ -12,11 +12,11 @@
       margin: 10px;
     }
   </style>
-</head>
+</head> 
 
 <body>
   <video id="video" src="/assets/video.mp4" controls></video>
-  </script>
+  <script src="./src/index.js" type="module"></script>
 </body>
 
 </html>
